--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                                             <p class="mt-1 ms-5 mb-4 " style="color: #BBB;">Receive exclusive offers in your mailbox</p>
                                              <div class="row ">
                                                   <div class="col d-flex">
-                                                    <div class="col ms-5 mt-3 "> 
+                                                    <div class="col ms-5 mt-3 " display:content> 
                                                         <img src="./Image/mail.svg" alt=" Email icon" class="img-fluid">
                                                      
                                                     </div>  
